WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
165489
Two tiled drawing tests failing with visual viewports enabled.
https://bugs.webkit.org/show_bug.cgi?id=165489
Summary
Two tiled drawing tests failing with visual viewports enabled.
Simon Fraser (smfr)
Reported
2016-12-06 14:00:36 PST
[29/132] tiled-drawing/scrolling/frames/coordinated-frame-gain-scrolling-ancestor.html failed unexpectedly (text diff) [49/132] tiled-drawing/scrolling/frames/coordinated-frame-lose-scrolling-ancestor.html failed unexpectedly (text diff) Problem is that we update the layout viewport when the visual viewport is empty, for subframes: FrameView 0x121bf0b80 updateLayoutViewport() layoutViewport: (0,0) width=0 height=0 visualViewport: (0,0) width=500 height=300 scroll positions: min: (0,0) max: (0,0) layoutViewport changed to (500,300) width=0 height=0
Attachments
Patch
(6.95 KB, patch)
2016-12-06 21:03 PST
,
Simon Fraser (smfr)
dino
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2016-12-06 15:18:22 PST
Marked as flakey in
https://trac.webkit.org/changeset/209419
Simon Fraser (smfr)
Comment 2
2016-12-06 21:03:21 PST
Created
attachment 296370
[details]
Patch
Dean Jackson
Comment 3
2016-12-06 21:10:53 PST
Comment on
attachment 296370
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=296370&action=review
> Source/WebCore/page/FrameView.cpp:1800 > +
Get rid of these spaces.
Simon Fraser (smfr)
Comment 4
2016-12-06 21:15:13 PST
https://trac.webkit.org/r209447
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug